--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
 
     <div class="container-fluid">
         <div id="main_content">
+<div row1>
+
+</div> <!--end div row1-->
+<div row2>
+
+</div><!--end div row2-->
+<div row3>
+
+</div><!--end div row3-->
+<div row4>
+
+</div><!--end div row4-->
+<div row5>
+    
+</div><!--end div row5-->
 
         </div> <!--end div of main-content-->
     </div> <!--end div of container-fluid -->
