rows and columns with appropriate class names

--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Unit 4-Game</title>
+    <!-- adding reset css file -->
+    <link href="assets/css/reset.css" rel="stylesheet" type="text/css">
+
+    <!-- adding bootstrap -->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+
+    </script>
     <!--local css-->
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <!-- adding javascript file -->
@@ -33,26 +39,60 @@
     </div>
     <!--end of wrapper-->
 
-    <div class="container-fluid">
+    <div class="container" class="wrapper">
         <div id="main_content">
-<div row1>
 
-</div> <!--end div row1-->
-<div row2>
+            <div id="row" class="game-desc">
+                description
+            </div>
+            <!--end div row1-->
 
-</div><!--end div row2-->
-<div row3>
+            <br>
 
-</div><!--end div row3-->
-<div row4>
+            <div id="row">
+            
+                <div class="col-md-6" class="game-target">
+gameTarget
 
-</div><!--end div row4-->
-<div row5>
-    
-</div><!--end div row5-->
+                </div> <!-- end of dev game-target -->
 
-        </div> <!--end div of main-content-->
-    </div> <!--end div of container-fluid -->
+                <div class="col-md-6" class="win-loss">
+                   win-loss
+
+                </div> <!-- end of dev win-loss -->
+
+
+            </div>
+            <!--end div row2-->
+
+            <br>
+            <div id="row">
+                <div class="col-md-7" class = "gems">
+
+               gemRow
+                </div> <!-- end of dev row3column1 -->
+
+            </div>
+            <!--end div row3-->
+
+            <br>
+
+            <div id="row" class = "scoreTitle">
+                scoreTitle
+            </div>
+            <!--end div row4-->
+
+            <br>
+
+            <div id="row" class= = "playerScore">
+                playerScore
+            </div>
+            <!--end div row5-->
+
+        </div>
+        <!--end div of main-content-->
+    </div>
+    <!--end div of container -->
 </body>
 
 </html>
