--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container" class="wrapper">
         <div id="main_content">
 
-            <div id="row" class="game-desc">
+            <div id="row" class="gameDesc">
                 description
             </div>
             <!--end div row1-->
@@ -50,14 +50,14 @@
             <br>
 
             <div id="row">
-            
-                <div class="col-md-6" class="game-target">
-gameTarget
+
+                <div class="col-md-6" class="gameTarget">
+                    gameTarget
 
                 </div> <!-- end of dev game-target -->
 
                 <div class="col-md-6" class="win-loss">
-                   win-loss
+                    win-loss
 
                 </div> <!-- end of dev win-loss -->
 
@@ -67,24 +67,24 @@ gameTarget
 
             <br>
             <div id="row">
-                <div class="col-md-7" class = "gems">
-
-               gemRow
-                </div> <!-- end of dev row3column1 -->
+                <div class="col-md-7" class="gemRow">
+gemRow
+                  
+                </div><!-- end of dev row3column1 -->
 
             </div>
             <!--end div row3-->
 
             <br>
 
-            <div id="row" class = "scoreTitle">
+            <div id="row" class="scoreTitle">
                 scoreTitle
             </div>
             <!--end div row4-->
 
             <br>
 
-            <div id="row" class= = "playerScore">
+            <div id="row" class="playerScore">
                 playerScore
             </div>
             <!--end div row5-->
