--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Unit 4-Game</title>
+
     <!-- adding reset css file -->
     <link href="assets/css/reset.css" rel="stylesheet" type="text/css">
 
-    <!-- adding bootstrap -->
+    <!-- Added link to the jQuery Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Added a link to Bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
 
-    </script>
     <!--local css-->
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <!-- adding javascript file -->
@@ -29,70 +26,67 @@
 
 <body>
 
-    <div class="wrapper">
-        <section id="main_header">
-            <h1 id="crystalHeader">Crystal Collector!</h1>
+    <div class="wrapper" class="jumbotron">
 
+        <h1 id="crystalHeader" class="text-white">Crystal Collector!</h1>
 
-        </section>
 
     </div>
     <!--end of wrapper-->
 
-    <div class="container" class="wrapper">
-        <div id="main_content">
 
-            <div id="row" class="gameDesc">
-                description
-            </div>
-            <!--end div row1-->
+    <div id="main_content">
 
-            <br>
-
-            <div id="row">
-
-                <div class="col-md-6" class="gameTarget">
-                    gameTarget
-
-                </div> <!-- end of dev game-target -->
-
-                <div class="col-md-6" class="win-loss">
-                    win-loss
-
-                </div> <!-- end of dev win-loss -->
+        <div id="row" class="gameDesc">
+            description
+        </div>
+        <!--end div row1-->
 
 
-            </div>
-            <!--end div row2-->
 
-            <br>
-            <div id="row">
-                <div class="col-md-7" class="gemRow">
-gemRow
-                  
-                </div><!-- end of dev row3column1 -->
+        <div id="row">
 
-            </div>
-            <!--end div row3-->
+            <div class="col-md-6" class="gameTarget">
 
-            <br>
 
-            <div id="row" class="scoreTitle">
-                scoreTitle
-            </div>
-            <!--end div row4-->
+            </div> <!-- end of dev game-target -->
 
-            <br>
+            <div class="col-md-6" class="win-loss">
+                win-loss
 
-            <div id="row" class="playerScore">
-                playerScore
-            </div>
-            <!--end div row5-->
+            </div> <!-- end of dev win-loss -->
+
 
         </div>
-        <!--end div of main-content-->
+        <!--end div row2-->
+
+        <br>
+        <div id="row">
+            <div class="col-md-7" class="gemRow">
+                gemRow
+
+            </div><!-- end of dev row3column1 -->
+
+        </div>
+        <!--end div row3-->
+
+        <br>
+
+        <div id="row" class="scoreTitle">
+            scoreTitle
+        </div>
+        <!--end div row4-->
+
+        <br>
+
+        <div id="row" class="playerScore">
+            playerScore
+        </div>
+        <!--end div row5-->
+
     </div>
-    <!--end div of container -->
+    <!--end div of main-content-->
+
 </body>
 
 </html>
