changed the gem row, so each gem is in its own column

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <!-- adding reset css file -->
     <link href="assets/css/reset.css" rel="stylesheet" type="text/css">
 
-    <!-- Added link to the jQuery Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <!-- Added a link to Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-
+    <!-- JAVASCRIPT  -->
+    <!-- ========================================= -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!--local css-->
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
@@ -34,24 +33,35 @@
     </div>
     <!--end of wrapper-->
 
-
-    <div id="main_content">
-
-        <div id="row" class="gameDesc">
-            description
-        </div>
-        <!--end div row1-->
+    <div class="container">
 
 
 
-        <div id="row">
+        <div class="row">
 
-            <div class="col-md-6" class="gameTarget">
+       
 
+        <div class="col-lg-6" class="gameDesc">
+            game description
+
+        </div> <!-- end of gameDesc div -->
+        <div class="col-lg-6" class="blankcolumn">
+
+
+        </div> <!-- end of dev blankcolumn -->
+
+    </div>
+    <!--end div row1-->
+
+
+        <div class="row">
+
+            <div class="col-md-4" class="gameTarget">
+                gametarget
 
             </div> <!-- end of dev game-target -->
 
-            <div class="col-md-6" class="win-loss">
+            <div class="col-md-2" class="win-loss">
                 win-loss
 
             </div> <!-- end of dev win-loss -->
@@ -59,34 +69,40 @@
 
         </div>
         <!--end div row2-->
-
+    
         <br>
-        <div id="row">
-            <div class="col-md-7" class="gemRow">
-                gemRow
+        <div class="row">
+            <div class="col-md-2" id="gem0">
 
-            </div><!-- end of dev row3column1 -->
+            </div><!-- end of div redgem -->
+            <div class="col-md-2" id="gem1">
 
+            </div><!-- end of div bluegem -->
+            <div class="col-md-2" id="gem2">
+
+            </div><!-- end of div yellowgem -->
+            <div class="col-md-2" id="gem3">
+
+            </div><!-- end of div greengem -->
         </div>
         <!--end div row3-->
 
         <br>
 
-        <div id="row" class="scoreTitle">
+        <div class="row" class="scoreTitle">
             scoreTitle
         </div>
         <!--end div row4-->
 
         <br>
 
-        <div id="row" class="playerScore">
+        <div class="row" class="playerScore">
             playerScore
         </div>
         <!--end div row5-->
 
-    </div>
-    <!--end div of main-content-->
-
+   
+</div> <!-- end of container-->
 </body>
 
 </html>
