modified gem columns to 1 so gems closer together

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
             </div> <!-- end of dev game-target -->
 
             <div class="col-md-2" id="win-loss">
-                win-loss
-
+                <!--win-loss-->
+                <p>Wins: <span id="wins"></span></p>
+                <p>Losses: <span id="losses"></span></p>
             </div> <!-- end of dev win-loss -->
 
 
@@ -71,16 +72,16 @@
 
         <br>
         <div class="row">
-            <div class="col-md-2" id="gem0">
+            <div class="col-md-1" id="gem0">
 
             </div><!-- end of div redgem -->
-            <div class="col-md-2" id="gem1">
+            <div class="col-md-1" id="gem1">
 
             </div><!-- end of div bluegem -->
-            <div class="col-md-2" id="gem2">
+            <div class="col-md-1" id="gem2">
 
             </div><!-- end of div yellowgem -->
-            <div class="col-md-2" id="gem3">
+            <div class="col-md-1" id="gem3">
 
             </div><!-- end of div yellowgem -->
 
@@ -101,10 +102,9 @@
         <br>
 
         <div class="row" id="playerScore">
-    
+            
         </div>
         <!--end div row5-->
-
 
     </div> <!-- end of container-->
 </body>
