removed <br>s from index.html. modified margins to format correctly

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
     <div class="container">
 
+<!-- I created 5 rows to hold my game page sections-->
 
-
+<!--row for Game Description-->
         <div class="row">
 
 
@@ -52,6 +53,7 @@
         </div>
         <!--end div row1-->
 
+<!-- Row to hold the Game Target Score and Win/Loss Counter-->
 
         <div class="row">
 
@@ -69,7 +71,9 @@
         </div>
         <!--end div row2-->
 
-        <br>
+        
+        <!--Row to hold my clickable Gem images -->
+
         <div class="row">
             <div class="col-md-1" id="gem0">
 
@@ -84,6 +88,7 @@
 
             </div><!-- end of div yellowgem -->
 
+            <!-- created blank column so my page formatted nicely -->
             <div class="col-md-4" id="blankgem">
 
             </div>
@@ -92,13 +97,13 @@
         </div>
         <!--end div row3-->
 
-        <br>
+        <!-- Row to store my Score label -->
 
         <div class="row" id="scoreTitle">
         </div>
         <!--end div row4-->
 
-        <br>
+        <!--Row to hold the Players Score -->
 
         <div class="row" id="playerScore">
 
